# controle_de_materiais

./: .gitignore  LICENSE  create_main.py  main.py  pyproject.toml
data/conf/: db_session.py
data/models/: __all_models.py  inventory_count.py  inventory_count_item.py  location.py  material.py  movement.py  movement_material.py  sector.py  shelf.py  type.py  user.py
data/repository/: location_repository.py  sector_repository.py  shelf_repository.py  type_repository.py  user_repository.py
routers/: location_routers.py  sector_routers.py  shelf_routers.py  type_routers.py  user_routers.py
schemas/: location_schema.py  sector_schema.py  shelf_schema.py  type_schema.py  user_schema.py
service/: location_service.py  sector_service.py  shelf_service.py  type_service.py  user_service.py
