[project]
name = "controle_de_materiais"
version = "0.1.0"
description = "Descrição do projeto"
readme = "README.md"
license = "MIT"
authors = [{ name = "Jhonata Canevare" }]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]

[project.optional-dependencies]
dev = ["ruff", "pyright"]

[tool.ruff]
line-length = 88
target-version = "py313"
fix = true
show-fixes = true
indent-width = 4
exclude = ["venv", ".venv", "env", ".env", "node_modules", "__pycache__"]

[tool.ruff.lint]
select = [
  "E", "W", "F",
  "B", "I", "UP", "SIM", "C4",
  "ANN", "RET", "S", "TRY",
  "RUF", "N",
]

ignore = [
  "S101",    # uso de assert
  "T201",    # print
  "COM812",  # vírgula final
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
exclude = [
  "**/venv",
  "**/.venv",
  "**/env",
  "**/.env",
  "**/node_modules",
  "**/__pycache__",
]
venv = ".venv"
venvPath = "."
executionEnvironments = [{ root = "src" }] # se não for usar a pasta src remova essa linha

reportMissingTypeStubs = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel] # se não for usar a pasta src remova essa linha
packages = ["src/"]
